--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,33 @@
 .App {
-  display: flex;
-  width: 1200px;
+  text-align: center;
 }
 
-.App .left {
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 40vmin;
+  pointer-events: none;
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
-  justify-content: center;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.products {
-  width: 1200px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  background: gray;
-  padding-top: 15px;
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
