--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,15 @@
 .app {
   display: flex;
   flex-direction: column;
-  width: 1200px;
+  // width: 1200px;
 }
 
-.app .top-bar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.app {
+  .top-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .app .top-bar a {
@@ -18,8 +20,20 @@
   width: 100%;
 }
 
-.app .top-bar .top-subtotal-cart-count {
+.app {
+  .top-bar {
+    .top-subtotal-cart-count {
+      padding-right: 20px;
+    }
 
+    .search {
+      width: 35%;
+    }
+  }
+
+  .filter-bar {
+    background: #F6C155;
+  }
 }
 
 .app .left {
@@ -29,10 +43,8 @@
 }
 
 .products {
-  width: 1200px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  background: gray;
   padding-top: 15px;
 }
