--- a/src/components/Search.scss
+++ b/src/components/Search.scss
@@ -1,7 +1,40 @@
 .search-container {
-    background: green;
+    position: relative;
 
     input {
-        background: green;
+        width: 100%;
+        font-size: 1.125rem;
+        border: 1px solid #d9d9d9;
+        border-radius: 1.618em;
+        padding: .236082854800154em 1em;
+        padding-right: 1.618em;
+        line-height: 1.618em;
+        outline: none;
     }
+
+    .suggestion-list {
+        overflow-y: auto;
+        position: absolute;
+        background: rgb(189, 189, 189);
+        z-index: 50;
+        max-height: 150px;
+
+        .suggestion-item {
+            cursor: pointer;
+            padding-left: 5px;
+            padding-right: 5px;
+            width: 100%;
+            text-align: left;
+        }
+
+        .selected {
+            background: yellow;
+        }
+
+        .no-match {
+            color: red;
+            padding-left: 5px;
+            padding-right: 5px;
+        }
+    }    
 }
