--- a/src/App.scss
+++ b/src/App.scss
@@ -71,6 +71,6 @@
 .products {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-between;
   padding-top: 15px;
 }
