--- a/src/components/Cart.scss
+++ b/src/components/Cart.scss
@@ -9,6 +9,21 @@
     img {
         max-height: 1%;
     }
+
+    .items {
+        margin-bottom: 15px;
+    }
+
+    .checkout {
+        background: #EEC268;
+        width: 160px;
+        height: 35px;
+        font-size: 14px;
+        font-weight: bold;
+        border-radius: 5px;
+        border: 1px solid black;
+        cursor: pointer;      
+    }
 }
 
 table, th, td {
