--- a/src/components/Search.scss
+++ b/src/components/Search.scss
@@ -12,7 +12,7 @@
 
     input {
         width: 100%;
-        font-size: 1.125rem;
+        // font-size: 1.125rem;
         border: none;
         outline: none;
     }
