--- a/src/App.scss
+++ b/src/App.scss
@@ -5,62 +5,96 @@
 
   .top-bar {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 750;
+    width: 100%;
 
-    a {
-      width: 8%;
+    height: 17em;
+    background: white;
+
+
+    .top {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
   
-      img{
-        width: 100%;
+      a {
+        width: 8%;
+    
+        img{
+          width: 100%;
+        }    
       }    
-    }    
+  
+      .search {
+        width: 35%;
+      }    
+  
+      .top-subtotal-cart-count {
+        width: 10%;
+        padding-right: 20px;
+        
+        div {
+          margin-bottom: 15px;
+        }
 
-    .search {
-      width: 35%;
-    }    
-
-    .top-subtotal-cart-count {
-      width: 10%;
-      padding-right: 20px;
-      
-      div {
-        margin-bottom: 15px;
+        * {
+          font-size: 24px;
+        }
       }
     }
-  }
 
-  .filter-bar {
-    background: #F6C155;
-    display: flex;
-
-    div {
-      padding: 7px;
+    .bottom {
+      background: #F6C155;
+      display: flex;
+  
+      div {
+        padding: 7px;
+      }
+  
+      select {
+        font-size: 18px;
+      }
     }
   }
 }
 
 .app .body {
-  display: flex;
+  position: relative;
 
   .left {
-    display: flex;
-    width: 80%;
-    justify-content: center;
-    flex-direction: column;
+    width: 78%;
     border: 1px solid black;
-    margin: 10px;
+    margin-top: 10px;
+    margin-left: 10px;    
+    position: absolute;    
+    top: 17em;
+
+    .products {
+      position: relative;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      padding-top: 15px;
+    }    
   }
 
   .full-left {
-    width: 100%;
+    width: 99%;
   }
 
   .right {
     width: 20%;
-    display: flex;
-    justify-content: center;
-    margin: 10px;
+    border: 1px solid black;    
+    margin-right: 10px;
+    margin-top: 10px;
+    position: fixed;
+    top: 17em;
+    right: 0;
+    bottom: 0;    
   }
 
   .hidden-right {
@@ -68,9 +102,6 @@
   }
 }
 
-.products {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding-top: 15px;
+.search-container input {
+  font-size: 25px;
 }
